# dwg2jpg

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  INSTALL_GUIDE.md  LICENSE  README.md  WINDOWS_DEPLOYMENT_GUIDE.md  api_endpoints.py  app.py  check_attachment_table.py  check_dependencies.py  converter.py  database.py  deploy_server.sh  deploy_windows.bat  fix_dependencies.bat  install_basic_deps.bat  install_win32com_fix.bat  logger_config.py  main.py  main_basic.py  pyproject.toml  requirements.txt  simple_test.py  start_server.bat  start_server_final.bat  start_server_simple.bat  start_server_uv.bat  start_server_uv_basic.bat  start_server_uv_final.bat  start_server_uv_simple.bat  start_server_win.bat  start_simple_server.bat  test_api.bat  test_api.py  test_autocad_com.py  test_convert_path.py  test_converter_package.py  test_correct_path.py  test_data_structure.py  (+9 more)
ODA/ODAFileConverter26.7.0/: ACCAMERA_26.7_16.tx  ATEXT_26.7_16.tx  AcMPolygonObj15_26.7_16.tx  AcModelDocObj_26.7_16.tx  AcSynergyObjDPW_26.7_16.tx  AcTrace_26.7_16.tx  DbProperties_26.7_16.tx  ExFieldEvaluator_26.7_16.tx  ISM_26.7_16.tx  ModelerGeometry_26.7_16.tx  RText_26.7_16.tx  RecomputeDimBlock_26.7_16.tx  RxCommonDataAccess_26.7_16.tx  RxProperties_26.7_16.tx  SCENEOE_26.7_16.tx  TD_DbIO_26.7_16.tx  TD_DynBlocks_26.7_16.tx  WipeOut_26.7_16.tx
dwg2jpg/: __init__.py  converter.py
dwg2pdf_converter/: __init__.py  converter.py
test_output/: test_drawing.dxf
